# tools_git-syncer

./: .gitignore  auto_runner.py  auto_runner.yml  git_syncer.py  git_syncer.yml  pyproject.toml  readme.md  requirements.txt
release/: git_syncer.lnk  git_syncer.yml
test/: test_project_path.py
