[tool.poetry]
name = "git-syncer"
version = "0.1.2"
description = "Git 仓库同步 和 自动运行命令(可用于自启动和服务检测)"
authors = ["qiaogaojian <qiaogaojian@vip.qq.com>"]
readme = "README.md"
packages = [{include = "git_syncer"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
